--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,12 @@ body {
     margin: auto;
 }
 
-.main-div {
+/* .main-div {
     background-color: #ffffff;
     border-radius: 10px;
     padding: 30px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-}
+} */
 
 h2 {
     color: #007bff;
